manifest/objects/Acct_Rel__c.object
<CustomObject>
    <description>Models the possible contracts between any two accounts regardless of hierarchy</description>
    <fields>
        <fullName>Benefit_Sponsor_Name__c</fullName>
        <description>Since formula fields are not allowed in Lookup search, created a text field which is updated by a workflow rule. It should be only accessible to system admin and readonly.</description>
        <label>Benefit Sponsor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Sponsor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account receiving services</description>
        <inlineHelpText>Lookup the Benefit Sponsor Account (Account receiving services) of the Relationship</inlineHelpText>
        <label>Benefit Sponsor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Servicing Accounts</relationshipLabel>
        <relationshipName>servicingaccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who helped with the deal</description>
        <inlineHelpText>Lookup the Contact Name of Broker</inlineHelpText>
        <label>Broker Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact - Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Svc_Acct__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Relationships</relationshipLabel>
        <relationshipName>Account_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Flat_Rate__c</fullName>
        <description>Flat Rate Commission for Broker</description>
        <inlineHelpText>Enter the Flat Rate Commission for Broker</inlineHelpText>
        <label>Broker Flat-Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Loc_Name__c</fullName>
        <description>Broker&apos;s Location/Local Office Name</description>
        <formula>Broker_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter the Broker&apos;s Location/Local Office Name</inlineHelpText>
        <label>Broker Loc. Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Physical location of a organization&apos;s site</description>
        <inlineHelpText>Lookup the Broker&apos;s Location</inlineHelpText>
        <label>Broker Location ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Location - Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Location__c.Location_HQ__c</field>
                <operation>equals</operation>
                <valueField>$Source.Svc_Acct__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Account Relationships</relationshipLabel>
        <relationshipName>Account_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Percentage__c</fullName>
        <description>Percentage Commission Amount for Broker</description>
        <inlineHelpText>Enter the Percentage Commission Amount for Broker</inlineHelpText>
        <label>Broker Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chronic_Care_Broker_Flat_Rate__c</fullName>
        <label>Chronic Care Broker Flat Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chronic_Care_Broker_Percentage__c</fullName>
        <label>Chronic Care Broker Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Composite_Key__c</fullName>
        <description>Svc Id + Sponsor Id + Relationship Type + Start Date will create a key to help prevent duplicates.</description>
        <label>Composite Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Required on Contractee/Broker</description>
        <inlineHelpText>Required on Contractee/Broker</inlineHelpText>
        <label>Servicing Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Relationship_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Contract_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractee_Relationships__c</fullName>
        <description>This field is used for Reporting purposes only on the Contracts team dashboard</description>
        <formula>IF( (Benefit_Sponsor__r.Number_of_Won_Opportunities__c &gt; 0 &amp;&amp;  TEXT(Relationship_Type__c) = &apos;Contractee&apos;), TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractee Relationships</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Benefit_Sponsor__r.BillingCountry</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date contract ends</description>
        <inlineHelpText>Enter the Date Relationship Terminated</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flat_Source_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Holds the id for the de-normalized account matching this relationship from the original BD instance.  This accounts for flattening the multiple accounts into one account + many relationships</description>
        <label>Flat Source Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Former Account which got merged into the Legacy Id to the Master Account</description>
        <label>Legacy Id</label>
        <referenceTo>Legacy_Id__c</referenceTo>
        <relationshipLabel>Former Relationships</relationshipLabel>
        <relationshipName>Former_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Select the Line of Business</description>
        <inlineHelpText>Select the Line of Business</inlineHelpText>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Relationship_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Commercial_Fully_Insured_FI</fullName>
                    <label>Commercial Fully Insured (FI)</label>
                </value>
                <value>
                    <fullName>Commercial_Administrative_Services_Only_ASO</fullName>
                    <label>Commercial Administrative Services Only (ASO)</label>
                </value>
                <value>
                    <fullName>Marketplace_Exchange</fullName>
                    <label>Marketplace Exchange</label>
                </value>
                <value>
                    <fullName>Medicare-Medicaid Plan (MMP)</fullName>
                </value>
                <value>
                    <fullName>Dual Eligible Special Needs Plans (DSNP)</fullName>
                </value>
                <value>
                    <fullName>Medicaid_Managed_Care</fullName>
                    <label>Medicaid Managed Care</label>
                </value>
                <value>
                    <fullName>Medicaid Fee for Service (FFS)</fullName>
                </value>
                <value>
                    <fullName>Children’s Health Insurance Program (CHIP)</fullName>
                </value>
                <value>
                    <fullName>Temporary Assistance for Needy Families (TANF)</fullName>
                </value>
                <value>
                    <fullName>Medicare Supplement</fullName>
                </value>
                <value>
                    <fullName>Medicare Fee for Service (FFS)</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage with Part D (MAPD)</fullName>
                </value>
                <value>
                    <fullName>Medicare_Advantage_MA</fullName>
                    <label>Medicare Advantage (MA)</label>
                </value>
                <value>
                    <fullName>Critical Illness</fullName>
                </value>
                <value>
                    <fullName>Extended Health Care</fullName>
                </value>
                <value>
                    <fullName>Chambers of Commerce</fullName>
                </value>
                <value>
                    <fullName>Maximum Benefit</fullName>
                </value>
                <value>
                    <fullName>CINUP</fullName>
                </value>
                <value>
                    <fullName>Health Plan Commercial Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <description>Select the type of Relationship for the Servicing Account.</description>
        <inlineHelpText>Select the type of Relationship for the Servicing Account.</inlineHelpText>
        <label>Servicing Account Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Relationship_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date contract starts</description>
        <inlineHelpText>Enter the Date Relationship Started</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Svc_Acct_Name__c</fullName>
        <description>Since formula fields are not allowed in Lookup search, created a text field which is updated by a workflow rule. It should be only accessible to system admin and readonly.</description>
        <label>Service Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Svc_Acct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account providing the service</description>
        <inlineHelpText>Lookup the Servicing Account of the Relationship</inlineHelpText>
        <label>Servicing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefit Sponsor Accounts</relationshipLabel>
        <relationshipName>benefitsponsors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TD_Acct__c</fullName>
        <formula>Svc_Acct__c =  Benefit_Sponsor__c</formula>
        <label>TD Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>relationship_type_detail__c</fullName>
        <description>Build for LVGO migration to support maintenance of relationship-specific data that was not captured in TD.</description>
        <inlineHelpText>Select the specific nature of the relationship.</inlineHelpText>
        <label>Relationship Type - Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activity Tracking Devices</fullName>
                </value>
                <value>
                    <fullName>Associated Health Plan</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Benefits Consultant</fullName>
                </value>
                <value>
                    <fullName>Biometrics Screening/Health  Risk Assessment</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular Health</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s Health and Obesity</fullName>
                </value>
                <value>
                    <fullName>Cohort</fullName>
                </value>
                <value>
                    <fullName>Concierge/Coaching Advocacy</fullName>
                </value>
                <value>
                    <fullName>Cost Transparency</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>Dental Services Provider</fullName>
                </value>
                <value>
                    <fullName>Diabetes Prevention</fullName>
                </value>
                <value>
                    <fullName>Disease Management</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>Eligibility Partner</fullName>
                </value>
                <value>
                    <fullName>EMR (Electronic Medical Records)</fullName>
                </value>
                <value>
                    <fullName>Financial Wellness</fullName>
                </value>
                <value>
                    <fullName>Health Engagement Platform</fullName>
                </value>
                <value>
                    <fullName>Health Plan (Payer)</fullName>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Lead Source</fullName>
                </value>
                <value>
                    <fullName>Maternity</fullName>
                </value>
                <value>
                    <fullName>Medical Second Opinion</fullName>
                </value>
                <value>
                    <fullName>Muskuloskeletal</fullName>
                </value>
                <value>
                    <fullName>Nutrition</fullName>
                </value>
                <value>
                    <fullName>Onsite Clinic</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment Platform</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Benefit Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Svc_Acct__c</columns>
        <columns>Benefit_Sponsor__c</columns>
        <columns>Line_of_Business__c</columns>
        <columns>Relationship_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REL-{00000000}</displayFormat>
        <label>Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Broker_Fee_Pct_CANNOT_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND( (ISPICKVAL( Relationship_Type__c , &apos;BROKER&apos;)),
AND( isblank( Broker_Flat_Rate__c ), isblank( Broker_Percentage__c ))
)</errorConditionFormula>
        <errorMessage>Broker flat fee commission OR Broker commission percentage must be filled in for  BROKERS</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Broker_related_field_must_be_broker</fullName>
        <active>false</active>
        <description>Relationship type must be broker in order to update broker related fields</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(Relationship_Type__c,&quot;Broker&quot;)),
OR(NOT(ISBLANK(Broker_Contact__c )),
NOT(ISBLANK(Broker_Flat_Rate__c )),
NOT(ISBLANK(Broker_Percentage__c )),
NOT(ISBLANK(Broker_Location__c ))))</errorConditionFormula>
        <errorMessage>Relationship Type must be Broker in order to input Broker Information fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Either_Fee_or_Percentage</fullName>
        <active>false</active>
        <errorConditionFormula>AND( OR(ISPICKVAL( Relationship_Type__c , &apos;BROKER&apos;),ISPICKVAL( Relationship_Type__c , &apos;Consultant&apos;),ISPICKVAL( Relationship_Type__c , &apos;Referral Partner&apos;))  ,

AND( !isblank( Broker_Flat_Rate__c ), !isblank( Broker_Percentage__c ))

)</errorConditionFormula>
        <errorMessage>Only one of the broker commission rate fields need to be filled in, not both</errorMessage>
    </validationRules>
</CustomObject>